# claude-windows-mcp-test

./: .gitignore  README.md  prompts.json  pyproject.toml  run_full_test.py
src/claude_mcp_test/: __init__.py  assessor.py  models.py  runner.py
