[project]
name = "claude-windows-mcp-test"
version = "1.0.0"
description = "Test Claude Code behavior on Windows with/without PowerShell MCP"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
test-no-mcp = "claude_mcp_test.runner:main_no_mcp"
test-with-mcp = "claude_mcp_test.runner:main_with_mcp"
assess = "claude_mcp_test.assessor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_mcp_test"]
